Fix: NOT showing movie genres when query by movie id
- Clean up frontend code

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -14,18 +14,6 @@ body {
   font-family: 'Lato';
 }
 
-#movielist {
-  display:;
-}
-/*h1 {
-	font-family: Anton;
-	font-size: 42px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: bold;
-	line-height: 26.4px;
-}*/
-
 h1 {
   margin-top: 20px;
   font-family: 'Lobster';
@@ -34,13 +22,6 @@ h1 {
   transform: rotate(-1deg);
 }
 
- /*p, label, input, button {
-  font-family: Lobster;
-	font-size: 20px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 400;
-	line-height: 20px;}*/
 input {
   font-family: 'Lato';
 }
